<resources>
    <string name="app_name">ACHud</string>
    <string name="action_settings">Settings</string>
    <string name="not_available_text">N/A</string>
    <string name="drawer_open">Menú abierto</string>
    <string name="drawer_close">Menú cerrado</string>
    <string name="menu_captura">Captura</string>
    <string name="s_menu_camara_generica">Camara Generica</string>
    <string name="s_menu_gopro">GoPro 2bp, 3, 3+</string>
    <string name="ss_menu_crtl_sinc_auto">Control  y Sincro. Auto.</string>
    <string name="ss_menu_sincro_manual">Sincronizacion Manual</string>
    <string name="ss_menu_sincro_auto">Sincronizacion Automatica</string>
    <string name="s_menu_sjcam">SJCam, Clones SJCam</string>
    <string name="s_menu_camara_dispositivo">Camara del Dispositivo</string>
    <string name="menu_datos">Datos</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="s_menu_aplicacion">Aplicacion</string>
    <string name="s_menu_huds">HUD\'s</string>
    <string name="s_menu_telemetria">Telemetria</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="s_menu_manual">Manual de uso</string>
    <string name="s_menu_soporte">Soporte</string>
    <string name="s_menu_acerca_de">Acerca de</string>
    <string name="s_captura">Captura de datos y video</string>
    <string name="s_datos">Administra los datos capturados</string>
    <string name="settings_titulo_categoria_generales">Generales</string>
    <string name="settings_titulo_categoria_sensores">Sensores</string>
    <string name="velocidad">Velocidad</string>
    <string name="s_unidades_de_velocidad">Unidades de velocidad</string>
    <string name="s_acelerometro">Acelerometro</string>
    <string name="s_mensaje_servicio_en_ejecucion">Medicion en ejecucion, debes detener la medicion antes de inciar una nueva</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_giroscopo">Giroscopo</string>
    <string name="s_magnetico">Campo Magnetico</string>
    <string name="s_cronometro">Cronometro</string>
    <string name="s_delay">Delay</string>
    <string name="s_esquemas">Esquemas de HUD</string>
    <string name="s_esquemas_dir">Esquemas</string>
    <string name="s_esquemas_assets_dir">esquemas</string>
    <string name="s_datos_dir">Datos</string>
    <string name="s_out_dir">Salidas</string>
    <string name="s_elemento_no_seleccionado">Debe seleccionar un archivo de la lista</string>
    <string name="s_abrir_adm_arch">Abrir en FileBrowser</string>
    <string name="s_restore_huds">Restaurar HUDs</string>
    <string name="s_refresh_huds">Recargar</string>
    <string name="s_info_file">Detalles Archivo</string>
    <string name="s_invert_order">Invertir Orden</string>

</resources>
