<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_titulo_categoria_generales">

    </PreferenceCategory>
    <ListPreference
        android:defaultValue="1"
        android:title="@string/s_unidades_de_velocidad"
        android:entries="@array/entradasUnidadesDeVelocidad"
        android:entryValues="@array/valoresUnidadesDeVelocidad"
        android:key="list_preference_unidades" />
    <PreferenceCategory android:title="@string/settings_titulo_categoria_sensores">

    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/velocidad"
        android:key="check_box_preference_velocidad" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/s_acelerometro"
        android:key="check_box_preference_acelerometro" />
</PreferenceScreen>